--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fontsource/roboto": "^4.4.5",
     "core-js": "^3.15.1",
     "firebase": "^8.6.8",
+    "git-describe": "^4.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "register-service-worker": "^1.7.2",
