--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "eslint-plugin-vue": "^7.12.1",
     "moment-locales-webpack-plugin": "^1.2.0",
     "prettier": "^2.3.2",
-    "sass": "^1.35.1",
+    "sass": "~1.32",
     "sass-loader": "^10.1.1",
     "typescript": "~4.3.4",
     "vue-cli-plugin-vuetify": "^2.4.1",
