--- a/package.json
+++ b/package.json
@@ -18,44 +18,44 @@
     "start": "vue-cli-service serve --port 80"
   },
   "dependencies": {
-    "@fontsource/roboto": "^4.4.5",
-    "core-js": "^3.15.1",
-    "firebase": "^8.6.8",
+    "@fontsource/roboto": "^4.5.1",
+    "core-js": "^3.20.2",
+    "firebase": "^8.10.0",
     "git-describe": "^4.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "register-service-worker": "^1.7.2",
-    "router": "^1.3.5",
+    "router": "^1.3.6",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.2",
+    "vue-router": "^3.5.3",
     "vuetify": "^2.6.2",
     "vuex": "^3.6.2",
     "vuexfire": "^3.2.5"
   },
   "devDependencies": {
     "@mdi/font": "^5.9.55",
-    "@types/lodash": "^4.14.170",
+    "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "^4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-plugin-pwa": "^4.5.13",
-    "@vue/cli-plugin-router": "^4.5.13",
-    "@vue/cli-plugin-typescript": "^4.5.13",
-    "@vue/cli-service": "^4.5.13",
+    "@vue/cli-plugin-babel": "^4.5.15",
+    "@vue/cli-plugin-eslint": "^4.5.15",
+    "@vue/cli-plugin-pwa": "^4.5.15",
+    "@vue/cli-plugin-router": "^4.5.15",
+    "@vue/cli-plugin-typescript": "^4.5.15",
+    "@vue/cli-service": "^4.5.15",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-vue": "^7.12.1",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-vue": "^7.20.0",
     "moment-locales-webpack-plugin": "^1.2.0",
-    "prettier": "^2.3.2",
+    "prettier": "^2.5.1",
     "sass": "~1.32",
-    "sass-loader": "^10.1.1",
-    "typescript": "~4.3.4",
-    "vue-cli-plugin-vuetify": "^2.4.1",
+    "sass-loader": "^10.2.0",
+    "typescript": "^4.3.5",
+    "vue-cli-plugin-vuetify": "^2.4.5",
     "vue-template-compiler": "^2.6.14",
-    "vuetify-loader": "^1.7.2"
+    "vuetify-loader": "^1.7.3"
   }
 }
