--- a/package.json
+++ b/package.json
@@ -1,18 +1,11 @@
 {
   "name": "feuerwehr-app",
   "version": "1.0.0",
-  "description": "App for fire departments to do basic non-critical administrative work",
-  "keywords": [
-    "fire station",
-    "fire department",
-    "administration"
-  ],
-  "homepage": "https://github.com/gampig/feuerwehr-app",
-  "license": "GPL-3.0-only",
-  "repository": "github:gampig/feuerwehr-app",
   "private": true,
+  "description": "App for fire departments to do basic non-critical administrative work",
   "scripts": {
     "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "build-report": "vue-cli-service build --report",
     "serve-container": "vue-cli-service serve --port 80 --host localhost",
@@ -35,6 +28,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^5.9.55",
+    "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
@@ -43,20 +37,34 @@
     "@vue/cli-plugin-pwa": "^4.5.15",
     "@vue/cli-plugin-router": "^4.5.15",
     "@vue/cli-plugin-typescript": "^4.5.15",
+    "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/cli-service": "^4.5.15",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/test-utils": "^1.1.3",
+    "@vue/vue2-jest": "^27.0.0-alpha.2",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.0.6",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-vue": "^7.20.0",
+    "jest": "^27.0.5",
     "moment-locales-webpack-plugin": "^1.2.0",
     "prettier": "^2.5.1",
     "sass": "~1.32",
     "sass-loader": "^10.2.0",
+    "ts-jest": "^27.0.4",
     "typescript": "^4.3.5",
     "vue-cli-plugin-vuetify": "^2.4.5",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.3"
-  }
+  },
+  "homepage": "https://github.com/gampig/feuerwehr-app",
+  "keywords": [
+    "fire station",
+    "fire department",
+    "administration"
+  ],
+  "license": "GPL-3.0-only",
+  "repository": "github:gampig/feuerwehr-app"
 }
