--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   build:
-    name: Build the app
+    name: Install and build project
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -27,4 +27,8 @@ jobs:
           node-version: 16
           cache: 'npm'
       
-      - run: npm ci
+      - name: Install
+        run: npm ci
+
+      - name: Build
+        run: npm run build -- --modern
