Workflows: CI: Fix paths-ignore

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,10 @@ on:
     branches:
       - 'main'
     paths-ignore:
-      - '.devcontainer/'
-      - '.github/'
-      - 'docs/'
-      - 'tools/'
+      - '.devcontainer/**'
+      - '.github/**'
+      - 'docs/**'
+      - 'tools/**'
       - '.editorconfig'
       - '.git*'
       - '**.md'
