--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,10 @@
 		}
 	},
 
+  "mounts": [
+    "source=feuerwehr-app-node_modules,target=${containerWorkspaceFolder}/node_modules,type=volume"
+  ],
+
 	// Set *default* container specific settings.json values on container create.
 	"settings": {},
 
@@ -36,7 +40,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "yarn install",
+	"postCreateCommand": "sudo chown node node_modules",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "node"
