--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "sass": "~1.32",
     "sass-loader": "^10.2.0",
     "typescript": "4.3",
-    "vue-cli-plugin-vuetify": "^2.4.5",
+    "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.3"
   }
