--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fontsource/roboto": "^4.5.1",
     "core-js": "^3.20.2",
     "firebase": "^8.10.0",
+    "leaflet": "^1.7.1",
     "git-describe": "^4.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -29,6 +30,7 @@
     "router": "^1.3.6",
     "vue": "^2.7.14",
     "vue-router": "^3.5.3",
+    "vue2-leaflet": "^2.5.2",
     "vuetify": "^2.6.2",
     "vuex": "^3.6.2",
     "vuexfire": "^3.2.5"
