--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           cache: 'npm'
 
       - name: Generate empty configuration
-        run: echo "{}" > ./src/firebase/config.ts
+        run: echo "export default {}" > ./src/firebase/config.ts
       
       - name: Install
         run: npm ci
