--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.0.96",
+    "@rushstack/eslint-patch": "^1.5.1",
     "@types/lodash": "^4.14.178",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-pwa": "~5.0.8",
@@ -45,11 +44,11 @@
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-vue": "^7.20.0",
+    "eslint-plugin-vue": "^9.17.0",
     "moment-locales-webpack-plugin": "^1.2.0",
     "prettier": "^2.5.1",
     "sass": "~1.32",
