--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "git-describe": "^4.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "pinia": "^2.1.7",
     "register-service-worker": "^1.7.2",
     "router": "^1.3.6",
     "vue": "^2.7.14",
