--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "git-describe": "^4.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "openapi-fetch": "^0.9.2",
     "pinia": "^2.1.7",
     "register-service-worker": "^1.7.2",
     "router": "^1.3.6",
@@ -51,6 +52,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-vue": "^9.17.0",
     "moment-locales-webpack-plugin": "^1.2.0",
+    "openapi-typescript": "^6.7.4",
     "prettier": "^2.5.1",
     "sass": "~1.32",
     "sass-loader": "^10.2.0",
