Add test project to firebaserc

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "feuerwehr-parkstetten"
+    "default": "feuerwehr-parkstetten",
+    "test": "feuerwehr-parkstetten-test"
   }
 }
