--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@fontsource/roboto": "^4.5.1",
     "core-js": "^3.35.1",
-    "firebase": "^8.10.1",
+    "firebase": "^11.1.0",
     "git-describe": "^4.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -31,9 +31,9 @@
     "router": "^2.0.0",
     "vue": "^2.7.14",
     "vue-router": "^3.5.3",
+    "vuefire": "^3.2.1",
     "vuetify": "^2.6.2",
-    "vuex": "^3.6.2",
-    "vuexfire": "^3.2.5"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@mdi/font": "^7.0.96",
