Migrate to Vite

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_TITLE=FeuerwehrApp
-VUE_APP_SUPPORTED_DATABASE_SCHEMA_VERSION=1
+VITE_TITLE=FeuerwehrApp
+VITE_SUPPORTED_DATABASE_SCHEMA_VERSION=1
