--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,8 +31,8 @@ jobs:
           npm ci
           npm run build -- --modern
         env:
-          VUE_APP_API_ENDPOINT: https://api.app.feuerwehr-parkstetten.de/feuerwehr-app
-          VUE_APP_ANALYTICS_API_KEY: ${{ secrets.ANALYTICS_API_KEY }}
+          VITE_API_ENDPOINT: https://api.app.feuerwehr-parkstetten.de/feuerwehr-app
+          VITE_ANALYTICS_API_KEY: ${{ secrets.ANALYTICS_API_KEY }}
 
       - name: Upload app
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
