--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,8 +33,8 @@
 		"ecmel.vscode-html-css",
 		"dbaeumer.vscode-eslint",
 		"prettier.prettier",
-		"octref.vetur",
-		"esbenp.prettier-vscode"
+		"esbenp.prettier-vscode",
+		"Vue.volar"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
