--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
   "repository": "github:gampig/feuerwehr-app",
   "private": true,
   "scripts": {
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "build-report": "vue-cli-service build --report",
-    "serve-container": "vue-cli-service serve --port 80 --host localhost",
-    "start": "vue-cli-service serve --port 80"
+    "dev": "vite --port 80 --host 0.0.0.0",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src"
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.1",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vue/compat": "^3.5.13",
-    "core-js": "^3.35.1",
     "firebase": "^8.10.1",
     "git-describe": "^4.1.0",
     "lodash": "^4.17.21",
@@ -30,6 +29,8 @@
     "pinia": "^2.1.7",
     "register-service-worker": "^1.7.2",
     "router": "^2.0.0",
+    "vite": "^6.0.5",
+    "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.6",
@@ -40,26 +41,15 @@
     "@mdi/font": "^7.0.96",
     "@rushstack/eslint-patch": "^1.5.1",
     "@types/lodash": "^4.14.178",
-    "@vue/cli-plugin-babel": "~5.0.8",
-    "@vue/cli-plugin-eslint": "~5.0.8",
-    "@vue/cli-plugin-pwa": "~5.0.8",
-    "@vue/cli-plugin-router": "~5.0.8",
-    "@vue/cli-plugin-typescript": "~5.0.8",
-    "@vue/cli-service": "~5.0.8",
     "@vue/compiler-sfc": "^3.1.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^8.51.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-vue": "^9.17.0",
-    "moment-locales-webpack-plugin": "^1.2.0",
+    "eslint-plugin-vue": "^9.32.0",
     "openapi-typescript": "^6.7.4",
     "prettier": "^2.5.1",
     "sass": "~1.32",
-    "sass-loader": "^10.2.0",
-    "typescript": "4.7",
-    "vue-cli-plugin-vuetify": "~2.5.8",
-    "webpack-plugin-vuetify": "^3.0.3"
+    "typescript": "4.7"
   }
 }
