--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env",
+      "vite/client",
       "vuetify"
     ],
     "paths": {
@@ -28,6 +28,7 @@
     ]
   },
   "include": [
+    "vite.config.ts",
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
