--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src"
   },
   "dependencies": {
-    "@fontsource/roboto": "^4.5.1",
+    "@fontsource/roboto": "^5.1.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/compat": "^3.5.13",
     "firebase": "^8.10.1",
@@ -38,7 +38,7 @@
     "vuexfire": "^3.2.5"
   },
   "devDependencies": {
-    "@mdi/font": "^7.0.96",
+    "@mdi/font": "^7.4.47",
     "@rushstack/eslint-patch": "^1.5.1",
     "@types/lodash": "^4.14.178",
     "@vue/compiler-sfc": "^3.1.0",
@@ -49,7 +49,7 @@
     "eslint-plugin-vue": "^9.32.0",
     "openapi-typescript": "^6.7.4",
     "prettier": "^2.5.1",
-    "sass": "~1.32",
+    "sass": "^1.83.0",
     "typescript": "4.7"
   }
 }
