--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "openapi-typescript": "^6.7.4",
     "prettier": "^2.5.1",
     "sass": "^1.83.0",
-    "typescript": "4.7"
+    "typescript": "^4.9.5"
   }
 }
