--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/compat": "^3.5.13",
-    "firebase": "^8.10.1",
+    "firebase": "^11.1.0",
     "git-describe": "^4.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -33,9 +33,9 @@
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vuefire": "^3.2.1",
     "vuetify": "^3.7.6",
-    "vuex": "^4.1.0",
-    "vuexfire": "^3.2.5"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
