--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vuefire": "^3.2.1",
-    "vuetify": "^3.7.6",
-    "vuex": "^4.1.0"
+    "vuetify": "^3.7.6"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
