--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "openapi-typescript": "^6.7.4",
     "prettier": "^2.5.1",
     "sass": "^1.83.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vite-plugin-pwa": "^0.21.1"
   }
 }
