--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier": "^2.5.1",
     "sass": "^1.83.0",
     "typescript": "^4.9.5",
-    "vite-plugin-pwa": "^0.21.1"
+    "vite-plugin-pwa": "^0.21.1",
+    "vite-plugin-vue-devtools": "^7.6.8"
   }
 }
