--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "dev": "vite --port 80 --host 0.0.0.0",
     "build": "vite build",
-    "serve": "vite preview",
+    "serve": "vite preview --port 80 --host 0.0.0.0",
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src"
   },
   "dependencies": {
