--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
     "openapi-typescript": "^6.7.4",
     "prettier": "^2.5.1",
     "sass": "^1.83.0",
-    "typescript": "^4.9.5",
+    "typescript": "^5.7.2",
     "vite-plugin-pwa": "^0.21.1",
-    "vite-plugin-vue-devtools": "^7.6.8"
+    "vite-plugin-vue-devtools": "^7.6.8",
+    "vue-tsc": "^2.2.0"
   }
 }
