--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "scripts": {
     "dev": "vite --port 80 --host 0.0.0.0",
-    "build": "vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview --port 80 --host 0.0.0.0",
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src"
   },
